tests/miniJava/neg/006446_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while return ( 0 ) { } } }
